--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,4 +1,7 @@
 .container {
   max-width: 1440px;
   padding: 0 15px;
+  margin: 0 auto;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
 }
