--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,12 +1,15 @@
 .link {
   text-decoration: none;
-  color: black;
+  color: #03e9f4;
+  padding: 5px 25px;
+  transition: 0.5s;
+  border-radius: 5px;
 }
-
-.link:nth-child(odd) {
+.link:not(:last-child) {
   margin-right: 10px;
 }
-
+.link:hover,
 .activeLink {
-  color: yellowgreen;
+  color: #03e9f4;
+  box-shadow: 0 0 0 #03e9f4, 0 0 5px #03e9f4, 0 0 5px #03e9f4, 0 0 20px #03e9f4;
 }
