--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import-normalize;
 body {
-  /* background-color: #1c2e44; */
+  background-color: #1c2e44;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
