--- a/src/views/HomePage/HomePage.module.css
+++ b/src/views/HomePage/HomePage.module.css
@@ -5,7 +5,7 @@
   display: grid;
   max-width: calc(100vw - 48px);
   grid-template-columns: repeat(auto-fill, minmax(362px, 1fr));
-  grid-gap: 32px;
+  grid-gap: 40px;
   border-radius: 10px;
 }
 .item {
@@ -30,4 +30,5 @@
   text-shadow: 0 15px 25px rgba(0, 0, 0, 0.7);
   color: #fff;
   margin-bottom: 30px;
+  text-align: center;
 }
