--- a/src/views/Reviews/Reviews.module.css
+++ b/src/views/Reviews/Reviews.module.css
@@ -1,6 +1,6 @@
 .list {
   padding: 40px;
-  background: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.1);
   box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
 
   border-radius: 10px;
@@ -10,7 +10,6 @@
   padding: 15px;
   border-radius: 10px;
   background-color: #fff;
-  box-shadow: 0 0 0 #a9a9a9, 0 0 5px #a9a9a9, 0 0 5px #a9a9a9, 0 0 20px #a9a9a9;
 }
 
 .item:not(:last-child) {
@@ -18,8 +17,7 @@
 }
 
 .name {
-  text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .title,
@@ -32,4 +30,5 @@
 
 .text {
   line-height: 1.3;
+  font-size: 17px;
 }
